# QtQuickApp

./: .gitignore  CMakeLists.txt  main.cpp  main.qml
.github/workflows/: build.yml
